--- a/css/cms-tweaks.css
+++ b/css/cms-tweaks.css
@@ -4,20 +4,13 @@
 	overflow: hidden;
 }
 
-
-/*.cms .jstree li > .jstree-icon {
-		display: none!important;
-}*/
-
 .pull-right {
     float: right!important;
 }
 
-
 .ss-toggle .ui-accordion-content {
     padding: 15px;
 }
-
 
 .counter-container {
     position: relative;
@@ -30,11 +23,11 @@
 .counter-container.counter-visible .charcounter {
     position: absolute;
     display: block;
-    bottom: -25px;
-    right: 25px;
+    top: -22px;
+    right: 22px;
     background: rgba(0,0,0,0.5);
     color: #fff;
-    /*opacity: 0.5;*/
     padding: 2px 5px;
     border-radius: 10px;
+    font-size: 80%;
 }
